--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background:#CCCC;
+
 }
 #banner {
    width:100%
@@ -8,9 +8,34 @@ body {
 backgroud: #cccccc;
 padding:30px;
 }
+h1{
+    text-align: center;
+}
 p{
 text-align:center
 }
+#missao{
+    font-size: 20px;
+}
 em strong {
 color:red(239,38,195)
+}
+.itens{
+    font-style: italic;
+}
+.beneficios{
+    background: #ffffff;
+    padding: 20px;
+}
+h2{
+    text-align: center;
+}
+ul{
+    display: inline-block;
+    vertical-align:  top;
+    width:20px;
+ margin-right:15
+}
+.imagembeneficios{
+    width: 50px;
 }
